--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,50 @@
-/*  your css code here. If applicable */
+body{
+	margin: 0;
+	font-family: Arial, sans-serif;
+	background-color: #f5f5f5;
+}
+
+.header{
+	background-color: #011e29;
+	color: white;
+	text-align: center;
+	padding: 20px;
+}
+
+.container{
+	display: flex;
+	justify-content: space-between;
+	padding: 20px;
+}
+
+.latest-news-section{
+	background-color: white;
+	padding: 20px;
+	width: 25%;
+	height: 10%;
+	border-radius: 10px;
+	text-align: center;
+}
+
+.main-article{
+	background-color: white;
+	padding: 20px;
+	width: 35%;
+	border-radius: 10px;
+	text-align: center;
+	height: 30%;
+}
+
+.pictorial-news-section{
+	background-color: white;
+	padding: 20px;
+	width: 25%;
+	border-radius: 10px;
+	text-align: center;
+}
+
+.pictorial-news-section img{
+	width: 100%;
+	height: auto;
+	margin-bottom: 10px;
+}
